swagger issues and level changes
