# owa-micro-admin/models/rolesModel.ts
@@ -7,6 +7,7 @@ class Role implements IRole {
   role_id: number;
   role_name: string;
   role_description: string;
+  level: string;
   status: number;
   permissions: any;
   date_created: string;
@@ -18,6 +19,7 @@ class Role implements IRole {
     this.role_id = role.role_id;
     this.role_name = role.role_name;
     this.role_description = role.role_description;
+    this.level = role.level;
     this.status = role.status;
     this.permissions = role.permissions;
     this.date_created = role.date_created;
@@ -36,6 +38,13 @@ const validateCreateRole = (role: IRole): Joi.ValidationResult => {
     role_description: Joi.string().min(3).max(50).required().error(
       new Error(JSON.stringify(ROLES.ROLE00002))
     ),
+    permissions: Joi.array().items(
+      Joi.object({
+        menu_id: Joi.number().required(),
+        permission_id: Joi.number().required()
+      })
+    ),
+    level: Joi.string().required(),
     status: Joi.number().valid(...Object.values(ROLES_STATUS)),
     date_created: Joi.string().allow("", null),
     date_updated: Joi.string().allow("", null),
@@ -54,6 +63,7 @@ const validateUpdateRole = (role: IRole): Joi.ValidationResult => {
     role_description: Joi.string().min(3).max(50).required().error(
       new Error(JSON.stringify(ROLES.ROLE00002))
     ),
+    level: Joi.string().required(),
     permissions: Joi.array().items(
       Joi.object({
         menu_id: Joi.number().required(),
