# owa-micro-admin/routes/rolesRouter.ts
@@ -9,6 +9,10 @@ rolesRouter.post("/add", rolesController.addRole);
 
 rolesRouter.post("/update", rolesController.updateRole);
 
+rolesRouter.get("/listLevels", rolesController.listLevels);
+
+rolesRouter.get("/defaultAccessList", rolesController.getDefaultAccessList);
+
 rolesRouter.get("/:roleId", rolesController.getRoleById);
 
 rolesRouter.post("/updateStatus", rolesController.updateRoleStatus);
@@ -17,9 +21,9 @@ rolesRouter.get("/accessList/:roleId", rolesController.getAccessListByRoleId);
 
 rolesRouter.get("/menusList/:roleId", rolesController.getAccessListByRoleId);
 
-rolesRouter.get("/combinedAccessList/:roleId", rolesController.getCombinedAccessListByRoleId);
+rolesRouter.get("/combinedAccessList/:roleId/:userId", rolesController.getCombinedAccessListByRoleId);
 
-rolesRouter.get("/defaultAccessList", rolesController.getDefaultAccessList);
+rolesRouter.get("/listBylevel/:level", rolesController.getRolesByLevel);
 
 export {
     rolesRouter
